# kii_hackathon

./: .gitignore  LICENSE  README.md  Test_kii_sdk.py  Test_send_data_endpoint.py  Test_send_tk.py  Test_send_tk_class.py  data_user.json  get_balance.py  main.py  maps.py  plot.py  pyproject.toml  send_tk.py
hardware_files/Test_gps/: Test_gps.ino
hardware_files/co2GpsSensor/co2GpsSensor/: co2GpsSensor.ino
templates/home_page/: index.html
templates/plots/: map.txt  map_2.txt  new_plot.txt  new_plot_2.txt
