[tool.poetry]
name = "kii-hackathon"
version = "0.1.0"
description = ""
authors = ["oriojas <oscarriojas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kiipy = "^0.1.0"
web3 = "^6.20.2"
pymysql = "^1.1.1"
uvicorn = "^0.30.6"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
